bug fix for table spacing issues

--- a/css/people.css
+++ b/css/people.css
@@ -199,7 +199,6 @@ html .node-type-asc-people .region-content .region-inner {
 }
 
 .views-field-field-asc-people-office-address {
-  white-space: pre-line;
 }
 
 .node-type-asc-people #region-sidebar {
